Resumen y palabras clave añadidos

--- a/proyecto_final.tex
+++ b/proyecto_final.tex
@@ -2,6 +2,11 @@
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{authblk}
+\usepackage{hyperref}
+\hypersetup{colorlinks=true,linkcolor=blue,filecolor=magenta,urlcolor=blue,}
+
+\providecommand{\keywords}[1]{\textbf{\textit{Palabras clave---}} #1}
+
 \begin{document}
 	\title {\bf Minerales super-reducidos en ofiolitas}
 	\author[1]{\sl \bf Núria Pujol-Solà}
@@ -20,5 +25,12 @@
 	\date{}
 	\maketitle
 	
+	\begin{abstract}
+	\href{https://github.com/nurpss/proyecto_final}{https://github.com/nurpss/proyecto\_final}
+	\\En los niveles mantélicos de varios complejos ofiolíticos (p. ej.: China, Tíbet, Rusia, Turquía, Albania) se han encontrado recientemente minerales indicadores de condiciones de ultra-alta presión (>10 GPa y >300 km; p. ej. diamante, pseudomorfos de coesita y stishovita) y de condiciones super-reducidas (de 4 a 7 órdenes de magnitud por debajo del tampón IW; p. ej. elementos nativos, aleaciones, carburos, nitruros y fosfuros) que se suponen propias del manto profundo, junto a minerales formados típicamente en la corteza continental (p. ej. circón, cuarzo, andalucita, cianita, etc.). El origen de esta compleja asociación mineral es actualmente un tema de intenso debate, con varios modelos propuestos: reciclaje en niveles profundos del manto, plumas mantélicas, contaminación de la placa subducente, impacto de rayos de tormenta y plumas frías (Pujol-Solà et al., 2018; Xiong et al., 2019 y referencias en estos artículos). 
+	En este trabajo se presentan los resultados obtenidos tras el estudio de muestras de cromitita y rocas asociadas (gabros y dunitas) en la transición manto-corteza de las ofiolitas de Cuba oriental. Los resultados sugieren que las fases super-reducidas en las rocas ofiolíticas se formaron a baja presión y baja temperatura durante el proceso de serpentinización.
+	\end{abstract}
+	\keywords{cromitita, moissanita, olivino, manto}
 	
+
 \end{document}
