--- a/proyecto_final.tex
+++ b/proyecto_final.tex
@@ -4,6 +4,8 @@
 \usepackage{authblk}
 \usepackage{hyperref}
 \usepackage{multicol}
+\usepackage[version=4]{mhchem}
+
 \hypersetup{colorlinks=true,linkcolor=blue,filecolor=magenta,urlcolor=blue,citecolor=green}
 
 \providecommand{\keywords}[1]{\textbf{\textit{Palabras clave---}} #1}
@@ -37,12 +39,14 @@
 		En la parte más oriental de la isla de Cuba se encuentra el macizo ofiolítico cretácico de Moa-Baracoa \cite{Iturralde}, el cual se caracteriza por la preservación de una zona de transición manto-corteza (MTZ, por sus siglas en inglés) bien desarrollada. La MTZ se compone de harzburgitas, dunitas, peridotitas impregnadas (clinopiroxeno y plagioclasa) y diques y sills de gabro. En esta zona se encuentran numerosos cuerpos de cromititas ricas en Al \cite{Proenza1999}. Estos cuerpos presentan formas tabulares a lenticulares y son concordantes con la foliación de la peridotita encajante, estando frecuentemente encajados en cuerpos de dunita. En múltiples casos, los cuerpos de cromitita incluyen (Figura 1), o están en contacto con, diques y sills de gabro de tamaño variable.
 	
 		\section{Resultados}
-		Estudios de microscopía óptica y electrónica y microRaman, han permitido identificar diferentes fases en las cromititas: lamelas orientadas de clinopiroxeno (Fig. 2a) y rutilo en la cromita, granos de moissanita en cromita y en la matriz alterada (Fig. 2b), fracturas secundarias selladas con inclusiones de carbono amorfo, serpentina poligonal, lizardita, magnetita, CH4, corindón, carbonatos y cuarzo, y granos de Cu nativo y aleación de Fe-Mn en concentrados minerales. 
-		También se han encontrado fases similares en cristales de olivino de diques de gabro y dunitas asociadas. En el olivino destacan las inclusiones de magnetita, serpentina y CH4 (Fig. 3); si bien, también se han encontrado inclusiones aciculares de ilmenita y espinela cromífera.
+		Estudios de microscopía óptica y electrónica y microRaman, han permitido identificar diferentes fases en las cromititas: lamelas orientadas de clinopiroxeno (Fig. 2a) y rutilo en la cromita, granos de moissanita en cromita y en la matriz alterada (Fig. 2b), fracturas secundarias selladas con inclusiones de carbono amorfo, serpentina poligonal, lizardita, magnetita, CH\textsubscript{4}, corindón, carbonatos y cuarzo, y granos de Cu nativo y aleación de Fe-Mn en concentrados minerales. 
+		También se han encontrado fases similares en cristales de olivino de diques de gabro y dunitas asociadas. En el olivino destacan las inclusiones de magnetita, serpentina y CH\textsubscript{4} (Fig. 3); si bien, también se han encontrado inclusiones aciculares de ilmenita y espinela cromífera.
 		
 		
 		\section{Discusión y \\conclusiones}
-		En la zona estudiada hay evidencias de relación genética entre los diques de gabro no metamorfizados y los cuerpos de cromitita serpentinizados. Esta relación geológica y petrogenética descarta un origen de (ultra)alta presión para los minerales descritos anteriormente. Contrariamente, las lamelas de exsolución (clinopiroxeno y rutilo) se habrían formado durante el enfriamiento de la cromita en el manto. Las fases super-reducidas (p. ej. moissanita, carbono amorfo, Cu nativo y aleación de Fe-Mn) se formaron en microambientes super-reducidos durante la serpentinización en condiciones de baja presión y baja temperatura. Estas condiciones super-reducidas se relacionan con los fluidos C-H-O involucrados en los primeros estadios de la serpentinización de las peridotitas en ambientes submarinos \cite{Golubkova}. En las reacciones de hidratación, el componente H2O del fluido se consume para formar fases hidratadas (serpentina), de modo que los fluidos C-H-O pueden alcanzar saturación en C y precipitar fases de C (p. ej. moissanita, carbono amorfo y grafito). Estos procesos de serpentinización quedan registrados en las inclusiones de serpentina–magnetita–CH4 que se encuentran en los olivinos de los gabros. Finalmente, las fases de corteza continental (p. ej. corindón?, cuarzo, circón) podrían representar xenocristales introducidos en el manto por subducción y emplazados en la corteza mediante plumas frías.
+		En la zona estudiada hay evidencias de relación genética entre los diques de gabro no metamorfizados y los cuerpos de cromitita serpentinizados. Esta relación geológica y petrogenética descarta un origen de (ultra)alta presión para los minerales descritos anteriormente. Contrariamente, las lamelas de exsolución (clinopiroxeno y rutilo) se habrían formado durante el enfriamiento de la cromita en el manto. Las fases super-reducidas (p. ej. moissanita, carbono amorfo, Cu nativo y aleación de Fe-Mn) se formaron en microambientes super-reducidos durante la serpentinización en condiciones de baja presión y baja temperatura. Estas condiciones super-reducidas se relacionan con los fluidos C-H-O involucrados en los primeros estadios de la serpentinización de las peridotitas en ambientes submarinos \cite{Golubkova}. En las reacciones de hidratación, el componente H\textsubscript{2}O del fluido se consume para formar fases hidratadas (serpentina), de modo que los fluidos C-H-O pueden alcanzar saturación en C y precipitar fases de C (p. ej. moissanita, carbono amorfo y grafito). El proceso se resume con la siguiente formula:
+		\ce{(Fe,Mg)_2SiO_4 + n*H_2O + CO_2 -> Mg_3Si_2O_5(OH)_4 + Fe_3O_4 + CH_4}.
+		\\Estos procesos de serpentinización quedan registrados en las inclusiones de serpentina–magnetita–CH\textsubscript{4} que se encuentran en los olivinos de los gabros. Finalmente, las fases de corteza continental (p. ej. corindón?, cuarzo, circón) podrían representar xenocristales introducidos en el manto por subducción y emplazados en la corteza mediante plumas frías.
 	\end{multicols}
 	
 	
