--- a/proyecto_final.tex
+++ b/proyecto_final.tex
@@ -50,10 +50,25 @@
 			
 \begin{multicols}{2}
 		\section{Resultados}
-		Estudios de microscopía óptica y electrónica y microRaman, han permitido identificar diferentes fases en las cromititas: lamelas orientadas de clinopiroxeno (Fig. 2a) y rutilo en la cromita, granos de moissanita en cromita y en la matriz alterada (Fig. 2b), fracturas secundarias selladas con inclusiones de carbono amorfo, serpentina poligonal, lizardita, magnetita, CH\textsubscript{4}, corindón, carbonatos y cuarzo, y granos de Cu nativo y aleación de Fe-Mn en concentrados minerales. 
-		También se han encontrado fases similares en cristales de olivino de diques de gabro y dunitas asociadas. En el olivino destacan las inclusiones de magnetita, serpentina y CH\textsubscript{4} (Fig. 3); si bien, también se han encontrado inclusiones aciculares de ilmenita y espinela cromífera.
+		Estudios de microscopía óptica y electrónica y microRaman, han permitido identificar diferentes fases en las cromititas: lamelas orientadas de clinopiroxeno (\ref{Fig2}a) y rutilo en la cromita, granos de moissanita en cromita y en la matriz alterada (\ref{Fig2}b), fracturas secundarias selladas con inclusiones de carbono amorfo, serpentina poligonal, lizardita, magnetita, CH\textsubscript{4}, corindón, carbonatos y cuarzo, y granos de Cu nativo y aleación de Fe-Mn en concentrados minerales. 
+		También se han encontrado fases similares en cristales de olivino de diques de gabro y dunitas asociadas. En el olivino destacan las inclusiones de magnetita, serpentina y CH\textsubscript{4} (\ref{Fig3}); si bien, también se han encontrado inclusiones aciculares de ilmenita y espinela cromífera.
+\end{multicols}
 		
+		\begin{figure}[h]
+			\centering
+			\includegraphics[width=100mm]{Figura2.jpg}
+			\caption{\sl a) Lamelas orientadas de clinopiroxeno en cromita (SEM-BSE); b) Grano de moissanita encajado en la matriz alterada de la cromitita (microscopio óptico) y espectro EDS del grano.}
+			\label{Fig2}
+		\end{figure}
 		
+		\begin{figure}[h]
+			\centering
+			\includegraphics[width=90mm]{Figura3.jpg}
+			\caption{\sl Imagen de FIB-SEM de una inclusión con magnetita y serpentina en olivino. Los perfiles indican la abundancia de los elementos en la línea de análisis (EDS linescan)}
+			\label{Fig3}
+		\end{figure}
+
+\begin{multicols}{2}	
 		\section{Discusión y \\conclusiones}
 		En la zona estudiada hay evidencias de relación genética entre los diques de gabro no metamorfizados y los cuerpos de cromitita serpentinizados. Esta relación geológica y petrogenética descarta un origen de (ultra)alta presión para los minerales descritos anteriormente. Contrariamente, las lamelas de exsolución (clinopiroxeno y rutilo) se habrían formado durante el enfriamiento de la cromita en el manto. Las fases super-reducidas (p. ej. moissanita, carbono amorfo, Cu nativo y aleación de Fe-Mn) se formaron en microambientes super-reducidos durante la serpentinización en condiciones de baja presión y baja temperatura. Estas condiciones super-reducidas se relacionan con los fluidos C-H-O involucrados en los primeros estadios de la serpentinización de las peridotitas en ambientes submarinos \cite{Golubkova}. En las reacciones de hidratación, el componente H\textsubscript{2}O del fluido se consume para formar fases hidratadas (serpentina), de modo que los fluidos C-H-O pueden alcanzar saturación en C y precipitar fases de C (p. ej. moissanita, carbono amorfo y grafito). El proceso se resume con la siguiente formula:
 		\ce{(Fe,Mg)_2SiO_4 + n*H_2O + CO_2 -> Mg_3Si_2O_5(OH)_4 + Fe_3O_4 + CH_4} \cite{Golubkova}.
